# wolf-asm

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  docs.md
asm/: Cargo.toml  grammar.ebnf  passes.md
asm/src/: asm.rs  ast.rs  const_table.rs  diagnostics.rs  executable.rs  include_expansion.rs  label_offsets.rs  lib.rs  parser.rs  validate.rs
asm/src/asm/: instr.rs  layout.rs
asm/src/diagnostics/: diagnostic.rs  writer.rs
asm/src/executable/: binary_format.rs
asm/src/parser/: lexer.rs  scanner.rs  source_files.rs  span.rs  token.rs
asm/tests/: assembler-test.rs
asm/tests/run-pass/: calc.ax  calc.wa  cat.ax  cat.wa  count.wa  fib.wa  hello.ax  oscillating_sum.wa  print.ax  print.wa  tic-tac-toe.wa
asm/tests/run-pass/tic-tac-toe/: board.wa  printer.wa
asm/tests/ui/: immediates.ax  immediates.stderr  immediates.wa  include-empty.ax  include-empty.stderr  include-infinite-recursion.stderr  include-infinite-recursion.wa  include-infinite-tree.ax  include-infinite-tree.wa  include-mutual-recursion1.ax  include-mutual-recursion1.stderr  include-mutual-recursion2.stderr  include-mutual-recursion2.wa  include-mutual-recursion3.ax  include-mutual-recursion3.stderr  include-not-found.ax  include-not-found.stderr  labels.stderr  labels.wa  syntax.ax  syntax.stderr  syntax.wa  validation.ax  validation.stderr
tests/run-fail/: divide-by-zero.stderr  divide-by-zero.wa  invalid-instruction.stderr  invalid-instruction.wa  jump-too-far.stderr  jump-too-far.wa  large-executable.stderr  large-executable.wa  out-of-bounds-access.stderr  (+1 more)
vm/: Cargo.toml
(+51 files in other folders)
