[package]
name = "wolf-asm"
description = "Assembler for The Wolf Assembly Language"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
termcolor = "1.1"
structopt = "0.3"
serde = {version = "1.0", features = ["derive", "rc"]}
bincode = "1.3"

[dev-dependencies]
rayon = "1.3"
tempfile = "3.1"
